Fix spacing with buttons

--- a/src/views/experience/experience.css
+++ b/src/views/experience/experience.css
@@ -70,4 +70,7 @@
     .time {
         font-size: 10px !important;
     }
+    .modal-btn {
+        padding: 0px;
+    }
 }
